# xmdwallet

./: CMakeLists.txt  CryptoNoteWallet.cmake  README.md  build.sh  xmd-coin
src/images/: cryptonote.icns  logo.psd
